// CRM Database Schema
// Docs: https://dbml.dbdiagram.io/docs

// Identity Context
Table users {
  id uuid [primary key, default: `gen_random_uuid()`]
  email varchar(255) [unique, not null]
  hashed_password varchar(255) [not null]
  name varchar(255) [not null]
  created_at timestamp [default: `now()`]
  
  indexes {
    email [unique]
  }
}

// Organization Context
Table organizations {
  id uuid [primary key, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  created_at timestamp [default: `now()`]
  
  indexes {
    name
  }
}

Table organization_members {
  id uuid [primary key, default: `gen_random_uuid()`]
  organization_id uuid [not null]
  user_id uuid [not null]
  role varchar(20) [not null, note: 'owner, admin, manager, member']
  created_at timestamp [default: `now()`]
  
  indexes {
    (organization_id, user_id) [unique]
    organization_id
    user_id
  }
}

// Sales Context
Table contacts {
  id uuid [primary key, default: `gen_random_uuid()`]
  organization_id uuid [not null]
  owner_id uuid [not null, note: 'User who owns this contact']
  name varchar(255) [not null]
  email varchar(255)
  phone varchar(50)
  created_at timestamp [default: `now()`]
  
  indexes {
    organization_id
    owner_id
    (organization_id, name)
  }
}

Table deals {
  id uuid [primary key, default: `gen_random_uuid()`]
  organization_id uuid [not null]
  contact_id uuid [not null]
  owner_id uuid [not null, note: 'User who owns this deal']
  title varchar(255) [not null]
  amount decimal(15, 2) [not null, note: 'Must be >= 0']
  currency varchar(3) [not null, note: 'USD, EUR, RUB, etc.']
  status varchar(20) [not null, note: 'new, in_progress, won, lost']
  stage varchar(20) [not null, note: 'qualification, proposal, negotiation, closed']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    organization_id
    contact_id
    owner_id
    status
    stage
    (organization_id, status)
    (organization_id, stage)
  }
}

Table tasks {
  id uuid [primary key, default: `gen_random_uuid()`]
  deal_id uuid [not null]
  title varchar(255) [not null]
  description text
  due_date date [note: 'Cannot be in the past']
  is_done boolean [default: false]
  created_at timestamp [default: `now()`]
  
  indexes {
    deal_id
    is_done
    due_date
    (deal_id, is_done)
  }
}

Table activities {
  id uuid [primary key, default: `gen_random_uuid()`]
  deal_id uuid [not null]
  author_id uuid [note: 'User who created activity, null for system events']
  type varchar(50) [not null, note: 'comment, status_changed, stage_changed, task_created, system']
  payload jsonb [not null, note: 'JSON with activity details']
  created_at timestamp [default: `now()`]
  
  indexes {
    deal_id
    author_id
    type
    created_at
    (deal_id, created_at)
  }
}

// Relationships

// Identity -> Organization
Ref: organization_members.user_id > users.id [delete: cascade]

// Organization -> Organization Members
Ref: organization_members.organization_id > organizations.id [delete: cascade]

// Organization -> Sales (Contacts)
Ref: contacts.organization_id > organizations.id [delete: restrict]
Ref: contacts.owner_id > users.id [delete: restrict]

// Organization -> Sales (Deals)
Ref: deals.organization_id > organizations.id [delete: restrict]
Ref: deals.contact_id > contacts.id [delete: restrict]
Ref: deals.owner_id > users.id [delete: restrict]

// Sales (Deals -> Tasks)
Ref: tasks.deal_id > deals.id [delete: cascade]

// Sales (Deals -> Activities)
Ref: activities.deal_id > deals.id [delete: cascade]
Ref: activities.author_id > users.id [delete: set null]

